kubernetes/db.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-service
  labels:
    app: mariadb
spec:
  ports:
    - port: 3306
      name: mariadb-port
  selector:
    app: mariadb
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb-sts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
        - name: mariadb
          image: mariadb
          ports:
            - containerPort: 3306
              name: mariadb-port
          volumeMounts:
            - name: datadir
              mountPath: /var/lib/mysql/
      volumes:
        - name: datadir
          persistentVolumeClaim:
            claimName: data-dir-claim
