kubernetes/smartorganizr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smartorganizr
  labels:
    app: smartorganizr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smartorganizr
  template:
    metadata:
      labels:
        app: smartorganizr
    spec:
      containers:
        - name: smartorganizr
          image: samuel19982/smartorganizr:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: smartorganizr
spec:
  selector:
    app: smartorganizr
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smartorganizr-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
spec:
  ingressClassName: public
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: smartorganizr
                port:
                  number: 80
